--- a/src/css/main.css
+++ b/src/css/main.css
@@ -34,6 +34,9 @@ html {
     width: 1px !important;
     white-space: nowrap !important; /* 3 */
   }
+  .red-button{
+    background-color: rgb(0, 136, 255);
+  }
   
   .main-nav {
     display: flex;
@@ -296,6 +299,13 @@ html {
 
 
 
-  .red-button{
+
+
+
+
+  .error-message {
     color: red;
+    font-size: 14px;
+    margin-top: 5px;
   }
+  
