Ajout de la pages transaction manque css dans le dropdown

--- a/src/css/main.css
+++ b/src/css/main.css
@@ -308,4 +308,11 @@ html {
     font-size: 14px;
     margin-top: 5px;
   }
+
+.category-title{
+  display: flex;
+  justify-content: space-between;
+  margin-left: 6rem;
+  margin-right:  rem;
+}
   
