--- a/src/css/main.css
+++ b/src/css/main.css
@@ -332,3 +332,16 @@ padding-bottom: 1rem;
   background-color: #00bc77;
   color: #fff;
 }
+
+
+.form-input{
+  display: flex;
+    flex-direction: column;
+    width: 10%;
+    align-items: center;
+    margin: 0 auto;
+    gap: 0.5rem;
+}
+.form-input [readonly] {
+  margin: 0;
+}
